# linalgae-rs

./: Cargo.toml
src/: lib.rs  main.rs  ops.rs
src/core/: matrix.rs
src/ops/: arithmetic.rs  linear.rs
tests/: apply_inplace_tests.rs  arithmetic_tests.rs  component_mul_inplace_tests.rs  component_mul_tests.rs  constructor_tests.rs  inplace_ops_tests.rs  linear_tests.rs  macro_tests.rs  matmul_tests.rs  matrix_tests.rs  rand_init_tests.rs  sub_assign_scaled_tests.rs  sum_tests.rs
