[package]
name = "linalgae-rs"
version = "0.1.1"
edition = "2024"
description = "linalgae-rs is a lightweight, generic linear algebra library for Rust, providing a Matrix<T> struct with support for arithmetic operations and random initialization."
license = "MIT"
repository = "https://github.com/VohraAK/linalgae-rs"

[dependencies]
num-traits = "0.2.19"
rand = "0.9.2"
rand_distr = "0.5.1"
